<resources>
    <string name="app_name">College Scheduler2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_courses">Courses</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_exams">Exams</string>
    <string name="menu_to_do_list">To Do Lists</string>
    <string name="menu_notifications">Notifications</string>
    <string name="addItem">Add Course</string>
    <string name="e_dd_mmm_yyyy_hh_mm_ss">E, DD-MMM-YYYY, HH:MM:SS</string>
    <string name="course_title">Course Title</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="dd_mm_yyyy_hh_mm_ss">dd/MM/yyyy HH:mm:ss</string>
    <string name="add_exam">Add Exam</string>
    <string name="exam_title">Exam Title</string>
    <string name="exam_location">Exam Location</string>
    <string name="title">Title</string>
    <string name="name_course_location">Name/Course/Location</string>
    <string name="titleLabel">Title</string>
    <string name="instructor_course_location">Instructor/course/location</string>
    <string name="sample_text">Sample Text</string>
    <string name="filler">Sample Text</string>
    <string name="add_list">Add List</string>
    <string name="list_title">List Title</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="associated_course">Associated Course</string>
    <string name="sortbydate">SortByDate</string>
    <string name="add_to_list">Add To List</string>
    <string name="add_reminder">Add Reminder</string>
</resources>