<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/outline_collections_bookmark_24"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/baseline_assessment_24"
            android:title="@string/menu_assignments" />
        <item
            android:id="@+id/nav_exams"
            android:icon="@drawable/sharp_checkbook_24"
            android:title="@string/menu_exams" />
        <item
            android:id="@+id/nav_to_do_list"
            android:icon="@drawable/sharp_add_notes_24"
            android:title="@string/menu_to_do_list" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/baseline_add_alarm_24"
            android:title="@string/menu_notifications" />
    </group>
</menu>